migrate jfuse-linux-amd64 to java 19